2019-03-25  Sergii Stoian  <stoyan255@gmail.com>

	* Resources/Lanuages/Ukrainian:
	Fix wrong \U sequence for letter 'i' and short weekdays.

2019-03-18  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Tools/gdomap.c:
	Fix crash in donames() when getaddrinfo returns an error.

2019-02-27  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/Additions/Unidoce.m: comment-out left-over debug logging.
	* Source/NSJSONSerialization.m: escape characters with codepoint
	greater than 0x7f.

2019-02-15  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSMime.m: When encoding quoted words in a header, ensure
	we don't split multibyte utf-8 characters into separate words.
	* Tests/base/GSMime/general.m: Add test for encode/decode folded
	subject line wit a euro symbol at the fold point.

2019-02-14  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSPrivate.h:
	* Source/NSBundle.m:
	* Source/NSPathUtilities.m:
	* Source/objc-load.m:
	GSPrivateSymbolPath() simplified by removing the unused argument
	and consolidated code so that, if the class lookup via dladdr()
	fails, we fall back to use __objc_dynamic_get_symbol_path().

2019-02-14  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/Additions/GSMime.m: Fix encoded word encoding specifier
	 to be uppercase ('B' or 'Q') as pere strict RFC specification.
	* Tests/base/GSMime/build.m: Add testcase for correct encoding.

2019-02-13  Richard Frith-Macdonald <rfm@gnu.org>

	* Tests/base/GSTLS/basic.m: Update testcase to use correct guard.

2019-02-12  Ivan Vucica <ivan@vucica.net>

	* Headers/GNUstepBase/GSTLS.h: Change guard to check for value of
	GS_USE_GNUTLS and not for its defined state. This preprocessor
	constant might be defined with a zero value indicating desire not to
	use GnuTLS, which would still pass the old check.

2019-02-11  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSObject.m: Improve thread safety with NSZombie particularly
	on startup/shutdown; be more careful about locking access to the