@@ -1,3 +1,9 @@
+2019-03-29 Igor Zhukov <fsb4000@yandex.ru>
+	* Source/NSDateFormatter.m:
+	* configure:
+	* configure.ac:
+	Decrease ICU version requirements to 49 to support Windows 2000.
+
 2019-03-25  Sergii Stoian  <stoyan255@gmail.com>
 
 	* Resources/Lanuages/Ukrainian:
